fix overflow issue

--- a/root/2d/style/main.css
+++ b/root/2d/style/main.css
@@ -15,7 +15,8 @@ body {
     display: none;
 }
 #main {
-    height: 85vh;
+    max-height: 85vh;
+    height: fit-content;
     overflow: scroll;
     scroll-behavior: smooth;
 
@@ -28,7 +29,7 @@ body {
     #maze-grid {
         position: relative;
         top: 50%;
-        transform: translateY(-50%)
+        transform: translateY(1%);
     }
 }
 
